# shittytoken

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GUARDIAN-STATE.md  Makefile  README.md  config.yml  pyproject.toml  workload_results.json
.claude/: guardian-config.json
config/: nginx.conf.template
config/grafana/: shittytoken.json
config/grafana/provisioning/dashboards/: default.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: prometheus.yml
docker/: Dockerfile.mock-worker  docker-compose.yml
docs/: architecture.md
scripts/: cache_sweep.py  dev-setup.sh  gpu_util_sweep.sh  stress_test.py  test_gateway.sh
src/shittytoken/: __main__.py  config.py  log.py
src/shittytoken/agent/: cost_tracker.py  gateway.py  health.py  llm.py  metrics.py  orchestrator.py  provisioner.py  qualification.py  spot_monitor.py  ssh.py  startup_monitor.py  state_machine.py  state_store.py
src/shittytoken/benchmark/: constants.py  metrics_collector.py  phases.py  request_generator.py  results_analyzer.py  runner.py  schema.py  sse_client.py  workloads.py
src/shittytoken/billing/: __init__.py  models.py  postgres.py  reconciler.py  redis_cache.py  usage_pipeline.py
src/shittytoken/common/: prometheus.py
src/shittytoken/gateway/: __init__.py  admin_api.py  auth.py  billing.py  billing_db.py  metrics_reader.py  middleware.py  nginx_config.py  prom_metrics.py  proxy.py  router.py  router_app.py  router_manager.py  routing_policy.py  worker_pool.py  worker_registry.py
src/shittytoken/knowledge/: client.py  queries.py  schema.py  seed.py
src/shittytoken/oom/: detector.py  reasoner.py  recovery.py
src/shittytoken/web/: __init__.py  app.py  routes.py  stripe_webhook.py
src/shittytoken/web/templates/: base.html  billing.html  dashboard.html  index.html  login.html  signup.html
tests/agent/: test_cost_tracker.py  test_health_drain.py  test_instance_monitor.py  test_provisioner.py  test_runpod_provider.py  test_state_machine.py  test_state_store.py  test_stuck_sweep.py
tests/benchmark/: mock_openai_server.py  test_full_benchmark.py  test_metrics_collector.py  test_request_generator.py  test_results_analyzer.py  test_sse_client.py
tests/gateway/: __init__.py  test_billing.py  test_nginx_config.py  test_proxy_retry.py  test_worker_registry.py
tests/knowledge/: test_queries.py
tests/oom/: test_reasoner.py  test_recovery.py
