[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shittytoken"
version = "0.1.0"
description = "Dirt-cheap LLM inference via autonomous spot GPU orchestration"
requires-python = ">=3.11"
dependencies = [
    "neo4j[async]>=5.19",
    "asyncssh>=2.14",
    "pydantic-ai-slim[anthropic]>=0.2",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "vastai-sdk>=0.5",
    "runpod>=1.8.1",
    "requests>=2.32.5",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "jinja2>=3.1",
    "aiohttp-jinja2>=1.6",
    "aiohttp-session[redis]>=2.12",
    "bcrypt>=4.1",
    "stripe>=8.0",
    "datasets>=4.7.0",
]

[project.optional-dependencies]
billing = [
    "stripe>=8.0",
    "aiokafka>=0.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-mock>=3.12",
    "testcontainers[neo4j]>=4.0",
    "aiohttp[speedups]>=3.9",
    "fakeredis[lua]>=2.21",
]

[project.scripts]
shittytoken = "shittytoken.__main__:cli"
shittytoken-router = "shittytoken.gateway.router:main"
shittytoken-web = "shittytoken.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shittytoken"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
